--- a/frontend/rate_my_teacher_fe/package.json
+++ b/frontend/rate_my_teacher_fe/package.json
@@ -13,6 +13,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
+  "proxy": "http://127.0.0.1:5000",
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.7",
